--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="blackjack.js"></script>
-<script src="blackjackFunction.js"></script>
+<script src="BlackJackFunction.js"></script>
 <link href="blackjack.css" rel="stylesheet">
 
 <div id="table">
