--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@
     <button id="deal-button">Deal</button>
     <button id="hit-button">Hit</button>
     <button id="stand-button">Stand</button>
+    <button id="play-again">PlayAgain</button>
   </div>
 </div>
