--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="foggy.js"></script>
 <script src="blackjack.js"></script>
-<script src="blackJackfunction2.js"></script>
+<script src="blackjackfunction2.js"></script>
 
 <link href="blackjack.css" rel="stylesheet">
 
